helloappdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: helloapp
spec:
 replicas: 3
 selector:
   matchLabels:
     app: helloapp
 template:
   metadata:
     labels:
       app: helloapp
   spec:
     containers:
     - name: helloapp
       image: gcr.io/google-samples/hello-app:1.0
---
apiVersion: v1
kind: Service
metadata:
 name: helloapp
 annotations:
   konghq.com/plugins: five-per-min
spec:
 selector:
   app: helloapp
 ports:
 - port: 80
   targetPort: 8080
