rabbitproducerdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitproducer
spec:
  selector:
    matchLabels:
      app: rabbitproducer
  template:
    metadata:
      labels:
        app: rabbitproducer
    spec:
      containers:
      - name: rabbitproducer
        image: xjxiao/rabbitproducer:latest
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitproducer
  annotations:
   konghq.com/plugins: five-per-min
spec:
  type: NodePort
  selector:
    app: rabbitproducer
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 31500
